test/sema/call.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): void {}

fn bar(x: number, y: number): void {}

fn main(): void {
    let x: number = 1.0;

    // CHECK: [[# @LINE + 1 ]]:6: error: calling expression of type 'number'
    x();

    // CHECK: [[# @LINE + 1 ]]:5: error: symbol 'y' not found
    y();

    // CHECK: [[# @LINE + 1 ]]:6: error: calling expression of type 'number'
    0();

    // CHECK: [[# @LINE + 1 ]]:8: error: wrong number of arguments in function call, expected 0, but received 1
    foo(x);

    // CHECK: [[# @LINE + 1 ]]:12: error: expected 'number' argument, but received 'void'
    bar(foo(), foo());

    // CHECK: [[# @LINE + 1 ]]:17: error: expected 'number' argument, but received 'void'
    bar(1.0, foo());
    
    // CHECK: [[# @LINE + 1 ]]:8: error: wrong number of arguments in function call, expected 2, but received 0
    bar();

    // CHECK: [[# @LINE + 1 ]]:8: error: wrong number of arguments in function call, expected 2, but received 3
    bar(1.0, 2.0, 3.0);

    bar(1.0, 2.0);
    foo();
}
